force-app/main/default/objects/Partner_Activity__c/Partner_Activity__c.object-meta.xml
<CustomObject>
    <label>Partner Activity</label>
    <nameField>
        <label>Partner Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>