force-app/main/default/objects/Partner_Activity__c/fields/Activity_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Activity_DateTime__c</fullName>
    <description>Date and time when the partner activity occurred.</description>
    <label>Activity DateTime</label>
    <type>DateTime</type>
</CustomField>