force-app/main/default/objects/Partner_Activity__c/fields/Activity_Message__c.field-meta.xml
<CustomField>
    <fullName>Activity_Message__c</fullName>
    <description>Message describing the partner activity.</description>
    <label>Activity Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>