force-app/main/default/objects/Partner_Activity__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account associated with the activity.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partner_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>