force-app/main/default/objects/Partner_Activity__c/fields/Performed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Performed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the partner activity.</description>
    <label>Performed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Performed_Partner_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>