force-app/main/default/objects/Partner_Activity__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description
  >API name of the object related to the partner activity.</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>