force-app/main/default/objects/Partner_Activity__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description
  >Salesforce record Id related to the partner activity.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>