force-app/main/default/objects/Partner_Activity__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Visibility scope for the partner activity.</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>Partner Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>